Resolved SocketException: Broken pipe (Write failed) using java 11 HttpClient